--- a/client/src/styles/scss/pages/mission.scss
+++ b/client/src/styles/scss/pages/mission.scss
@@ -81,7 +81,7 @@
             height: 8em;
             margin: 10px 10px;
             .face {
-                z-index: 20;
+                z-index: 5;
                 width: 200px;
                 img {
                     height: 165px;
